default/objects/Task__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>120</length>
    <type>Text</type>
</CustomField>