default/objects/Task__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>Objective task is for</description>
    <label>Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>tasks</relationshipLabel>
    <relationshipName>tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>