default/objects/Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>status of task e.g. &#39;active&#39;, &#39;done&#39;</description>
    <label>Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>